--- a/Inhalt/04_Inhalt/content_data_understanding.tex
+++ b/Inhalt/04_Inhalt/content_data_understanding.tex
@@ -83,10 +83,13 @@ The invoice item total amount stands for the charge corresponding to one line in
 
 \begin{table}[!h]
 	\caption{Five-number summary for Item total Amounts}
-	\begin{tabular}{l|llllllll}
-		\textbf{metric} &  \textbf{mean} & \textbf{std. dev.} & \textbf{min} & \textbf{25\%} & \textbf{50\%} & \textbf{75\%} & \textbf{max} \\
+	\centering
+	\begin{tabular}{llllllll}
+		\toprule
+		 \textbf{mean} & \textbf{std. dev.} & \textbf{min} & \textbf{25\%} & \textbf{50\%} & \textbf{75\%} & \textbf{max} \\
 		\midrule
-		value               & 4,749.69      & 17,687.85          & 1.64         & 45.84         & 276.20        & 1,520.00      & 197,721.71  
+		  4,749.69      & 17,687.85          & 1.64         & 45.84         & 276.20        & 1,520.00      & 197,721.71  \\
+		\bottomrule
 	\end{tabular}
 \end{table}
 
@@ -100,10 +103,14 @@ The quality of data for text mining purposes can be evaluated using four element
 
 \begin{table}[!h]
 	\begin{tabular}{lll}
-		Completeness                                                        & \begin{tabular}[c]{@{}l@{}}The extent to which data are of sufficient breadth, depth, \\ and scope for the task at hand\end{tabular}              &  \\
-		\begin{tabular}[c]{@{}l@{}}Correctness/free of\\ error\end{tabular} & The extent to which data is correct and reliable                                                                                                  &  \\
-		Timeliness                                                          & \begin{tabular}[c]{@{}l@{}}The extent to which the age of the data is appropriate \\ for the task at hand\end{tabular}                            &  \\
-		Consistency                                                         & \begin{tabular}[c]{@{}l@{}}The extent to which data are always presented in the same \\ format and are compatible with previous data\end{tabular} & 
+		\vspace{0.5cm}
+		\textbf{Completeness}                                                        & \begin{tabular}[c]{@{}l@{}}The extent to which data are of sufficient breadth, depth, \\ and scope for the task at hand\end{tabular}              &  \\
+		\vspace{0.5cm}
+		\textbf{Correctness} & The extent to which data is correct and reliable                                                                                                  &  \\
+		\vspace{0.5cm}
+		\textbf{Timeliness}                                                          & \begin{tabular}[c]{@{}l@{}}The extent to which the age of the data is appropriate \\ for the task at hand\end{tabular}                            &  \\
+		\vspace{0.5cm}
+		\textbf{Consistency}                                                         & \begin{tabular}[c]{@{}l@{}}The extent to which data are always presented in the same \\ format and are compatible with previous data\end{tabular} & 
 	\end{tabular}
 \end{table}
 
