--- a/Inhalt/04_Inhalt/content_dataset_selection.tex
+++ b/Inhalt/04_Inhalt/content_dataset_selection.tex
@@ -7,20 +7,20 @@
 	
 	\begin{table}[]
 		\caption{Comparison of Data Sources}
-		\begin{tabular}{l|ll}
+		\begin{tabular}{lll}
 			\toprule
-			& \textbf{Internal}                                                                                             & \textbf{External}                                                                                               \\
+			 & \textbf{Internal Data}                                                                                             & \textbf{External Data}                                                                                               \\
 			\midrule
-			\vspace{0.5cm}
-			Source       & \begin{tabular}[c]{@{}l@{}}Internal or customer data, \\ bought or generated\end{tabular}            & \begin{tabular}[c]{@{}l@{}}Publicly available, \\ generated or supplied by companies\end{tabular}      \\
-			\vspace{0.5cm}
-			Relevance    & Business-relevant                                                                                    & Anonymized, processed                                                                                  \\
-			\vspace{0.5cm}
-			Value        & Relevant specific business                                                                           & Of general relevance                                                                                   \\
-			\vspace{0.5cm}
-			Availability & \begin{tabular}[c]{@{}l@{}}Authorization processes in place,\\ data protection measures\end{tabular} & Ubiquitously available                                                                                 \\
-			\vspace{0.5cm}
-			Examples     & \begin{tabular}[c]{@{}l@{}}Sales records, usage statistics, \\ customer feedback\end{tabular}        & \begin{tabular}[c]{@{}l@{}}Historic weather information, \\ consumer statistics, social media data\end{tabular}
+			
+			Source       & \begin{tabular}[c]{@{}l@{}}Internal or customer data, \\ bought or generated\end{tabular}            & \begin{tabular}[c]{@{}l@{}}Publicly available, \\ generated or supplied by companies\end{tabular}      \\ \midrule
+			
+			Relevance    & Business-relevant                                                                                    & Anonymized, processed                                                                                  \\ \midrule
+			
+			Value        & Relevant specific business                                                                           & Of general relevance                                                                                   \\ \midrule
+			
+			Availability & \begin{tabular}[c]{@{}l@{}}Authorization processes in place,\\ data protection measures\end{tabular} & Ubiquitously available                                                                                 \\ \midrule
+			Examples     & \begin{tabular}[c]{@{}l@{}}Sales records, usage statistics, \\ customer feedback\end{tabular}        & \begin{tabular}[c]{@{}l@{}}Historic weather information, \\ consumer statistics, social media data\end{tabular}\\
+			\bottomrule
 		\end{tabular}
 	\end{table}
 	
@@ -41,22 +41,19 @@
 	\subsection{Project Types}
 \begin{table}[ht]
 	\caption{Fundamental Data Science Project Types}
-	\begin{tabular}{l|ll}
+	\begin{tabular}{lll}
 		\toprule
 		& \textbf{Problem-First}                                                                                                              & \textbf{Data-First}                                                                                                                                                \\
 		\midrule
+		
+		Systematics                                                             & Applied Data Science                                                                                                                & Exploratory Data Science                                                                                                                                           \\ \midrule
 		\vspace{0.5cm}
-		Systematics                                                             & Applied Data Science                                                                                                                & Exploratory Data Science                                                                                                                                           \\
-		\vspace{0.5cm}
-		\begin{tabular}[c]{@{}l@{}}Underlying\\ Question\end{tabular}           & \begin{tabular}[c]{@{}l@{}}How can a problem be \\ solved?\end{tabular}                                                             & \begin{tabular}[c]{@{}l@{}}Which problems can be \\ solved with the solution?\end{tabular}                                                                         \\
-		\vspace{0.5cm}
-		\begin{tabular}[c]{@{}l@{}}Role of the \\ dataset\end{tabular}          & \begin{tabular}[c]{@{}l@{}}Different datasets can be \\ considered for one \\ problem statement.\end{tabular}                       & \begin{tabular}[c]{@{}l@{}}The dataset is the core of \\ the project, with a new \\ dataset, a new project begins.\end{tabular}                                    \\
-		\vspace{0.5cm}
-		\begin{tabular}[c]{@{}l@{}}Requirements \\ for the dataset\end{tabular} & \begin{tabular}[c]{@{}l@{}}Require a ground truth or \\ established methods for \\ evaluating the goal \\ achievement.\end{tabular} & \begin{tabular}[c]{@{}l@{}}Compared to problem-first projects, \\ larger datasets are required because\\ there is no prior assumption of \\ patterns.\end{tabular} \\
-		\vspace{0.5cm}
-		Fixed component                                                         & Problem statement.                                                                                                                  & Dataset.                                                                                                                                                           \\
-		\vspace{0.5cm}
-		Innovative Aspect                                                       & \begin{tabular}[c]{@{}l@{}}Defined during formu-\\ lation of the goal.\end{tabular}                                                 & Found during the project.                                                                                                                                         
+		\begin{tabular}[c]{@{}l@{}}Underlying\\ Question\end{tabular}           & \begin{tabular}[c]{@{}l@{}}How can a problem be \\ solved?\end{tabular}                                                             & \begin{tabular}[c]{@{}l@{}}Which problems can be \\ solved with the solution?\end{tabular}                                                                         \\ \midrule
+		\begin{tabular}[c]{@{}l@{}}Role of the \\ dataset\end{tabular}          & \begin{tabular}[c]{@{}l@{}}Different datasets can be \\ considered for one \\ problem statement\end{tabular}                       & \begin{tabular}[c]{@{}l@{}}The dataset is the core of \\ the project, with a new \\ dataset, a new project begins\end{tabular}                                    \\ \midrule
+		\begin{tabular}[c]{@{}l@{}}Requirements \\ for the dataset\end{tabular} & \begin{tabular}[c]{@{}l@{}}Require a ground truth or \\ established methods for \\ evaluating the goal \\ achievement\end{tabular} & \begin{tabular}[c]{@{}l@{}}Compared to problem-first projects, \\ larger datasets are required because\\ there is no prior assumption of \\ patterns\end{tabular} \\ \midrule
+		Fixed component                                                         & Problem statement                                                                                                                  & Dataset                                                                                                                                                           \\ \midrule
+		Innovative Aspect                                                       & \begin{tabular}[c]{@{}l@{}}Defined during formu-\\ lation of the goal\end{tabular}                                                 & Found during the project                 \\
+		\bottomrule                                                                                                                        
 	\end{tabular}
 \end{table}
 
